Added how to download dataset

--- a/Final_Semester Project.ipynb
+++ b/Final_Semester Project.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5d08ccf4",
    "metadata": {},
    "outputs": [],
    "source": [
     "#link to download Dataset ********\n",
-    "https://www.kaggle.com/datasets/keplersmachines/kepler-labelled-time-series-data?select=exoTest.csv\n",
-    "#The curl command will"
+    "#https://www.kaggle.com/datasets/keplersmachines/kepler-labelled-time-series-data?select=exoTest.csv\n",
+    "#The curl command will not work. The dataset must be downloaded directly from the site"
    ]
   },
   {
